--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,162 @@
+:root {
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-light-blue-100: hsl(210, 78%, 56%);
+  --clr-light-green-100: hsl(146, 68%, 55%);
+  --clr-light-100: hsl(225, 100%, 98%);
+  --clr-light-200: hsl(227, 47%, 96%);
+  --clr-light-300: hsl(230, 22%, 74%);
+  --clr-light-400: hsl(228, 12%, 44%);
+  --clr-light-500: hsl(230, 17%, 14%);
+  --clr-dark-100: hsl(230, 17%, 14%);
+  --clr-dark-200:  hsl(232, 19%, 15%) //top bg pattern
+  --clr-dark-300: hsl(228, 28%, 20%);
+  --clr-dark-400: hsl(228, 34%, 66%);
+  --clr-accent-100: hsl(163, 72%, 41%)
+  --clr-accent-200: hsl(356, 69%, 56%);
+  --br: 1rem;
+  --spacer: 1rem;
+  --shadow-100: 0 0.75rem 2.25rem rgba(0, 0, 0, 0.25);
+  --ff-primary: 'Inter', sans-serif;
+  --fs-100: 0.6rem;
+  --fs-200: 0.75rem;
+  --fs-300: 0.875rem;
+  --fs-400: 1.5rem;
+  --fs-500: 1.75rem;
+  --fs-600: 2rem;
+  --fs-700: 3.5rem;
+  --fw-400: 400;
+  --fw-700: 700;
+  --lh-000: 1.0;
+  --lh-100: 1.1;
+  --lh-200: 1.2;
+  --lh-300: 1.3;
+  --lh-400: 1.4;
+  --lh-500: 1.5; }
+
+@media (min-width: 40em) {
+  :root {
+    --fs-600: 1.296rem;
+    --fs-700: 2rem; } }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box; }
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4 {
+  font-family: var(--ff-primary); }
+
+body,
+h1,
+h2,
+h3,
+p,
+dl,
+dd,
+figure {
+  margin: 0; }
+
+ul[class],
+ol[class] {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block; }
+
+input,
+label,
+select,
+button,
+textarea {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  display: inline-block;
+  vertical-align: middle;
+  white-space: normal;
+  background: none;
+  line-height: 1;
+  font: inherit; }
+
+input:focus {
+  outline: 0; }
+
+.flow-content > * + * {
+  margin-top: calc(1.5 * 1rem); }
+
+.flow-content-large > * + * {
+  margin-top: calc(3 * 1rem); }
+
+.split-auto {
+  display: grid;
+  gap: var(--gap, 1rem);
+  grid-template-columns: repeat(auto-fit, minmax(var(--min, min-content), 1fr)); }
+
+.split {
+  display: grid;
+  gap: var(--gap, 1rem); }
+
+@media (min-width: 40em) {
+  .split {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr; } }
+
+a {
+  color: inherit;
+  font-family: inherit;
+  display: inline-block; }
+
+.bg-dark {
+  --bg: red;
+  --fg: blue; }
+
 body {
-  background: white; }
+  font-family: var(--ff-primary);
+  font-size: var(--fs-300);
+  font-weight: var(--fw-400);
+  line-height: var(--lh-500);
+  background: var(--bg, var(--clr-neutral-100));
+  color: var(--fg, var(--clr-light-500)); }
+
+input[type=checkbox] {
+  height: 0;
+  width: 0;
+  visibility: hidden; }
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 50px;
+  height: 25px;
+  background: grey;
+  display: block;
+  border-radius: 25px;
+  position: relative; }
+
+label:after {
+  content: '';
+  position: absolute;
+  top: 1.25px;
+  left: 1.25px;
+  width: 22.5px;
+  height: 22.5px;
+  background: #fff;
+  border-radius: 22.5px;
+  transition: 0.3s; }
+
+input:checked + label {
+  background: #bada55; }
+
+input:checked + label:after {
+  left: calc(100% - 1.25px);
+  transform: translateX(-100%); }
+
+label:active:after {
+  width: 32.5px; }
