--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,9 @@
   //light theme
   --clr-light-100: hsl(225, 100%, 98%); //top bg pattern
   --clr-light-200: hsl(227, 47%, 96%);  //card bg
+  --clr-light-250: hsl(227, 33%, 91%); //card hover
   --clr-light-300: hsl(230, 22%, 74%); //toggle light theme
-  --clr-light-400: hsl(228, 12%, 44%); //text
+  --clr-light-400: hsl(228, 12%, 44%); //text h2
   --clr-light-500: hsl(230, 17%, 14%); //text
 
   //dark theme
@@ -18,8 +19,8 @@
   --clr-dark-400: hsl(228, 34%, 66%); //text
 
 
-  --clr-accent-100: hsl(163, 72%, 41%)
-  --clr-accent-200: hsl(356, 69%, 56%);
+  --clr-accent-100: hsl(163, 72%, 41%); //trend up
+  --clr-accent-200: hsl(356, 69%, 56%); //trend down
 
   --br: 1rem;
   --spacer: 1rem;
@@ -45,14 +46,8 @@
   --lh-300: 1.3;
   --lh-400: 1.4;
   --lh-500: 1.5;
+}
 
-}
-@media (min-width: 40em) {
-  :root {
-    --fs-600: 1.296rem;
-    --fs-700: 2rem;
-  }
-}
 
 *,
 *::before,
@@ -121,20 +116,36 @@ input:focus {
 
 .split-auto {
   display: grid;
-  gap: var(--gap, 1rem);
+  gap: var(--gap, 2rem);
   grid-template-columns: repeat(auto-fit, minmax(var(--min, min-content), 1fr));
 }
 
 .split {
   display: grid;
   gap: var(--gap, 1rem);
+  grid-auto-columns: 1fr;
 }
 
 @media (min-width: 40em) {
   .split {
-  grid-auto-flow: column;
-  grid-auto-columns: 1fr;
+    grid-auto-flow: column;
+    grid-auto-columns: auto;
   }
+}
+.space-bt {
+  justify-content: space-between;
+}
+
+.justify-ic {
+  justify-items: center;
+}
+
+.justify-cc {
+  justify-content: center;
+}
+
+.align-ic {
+  align-items: center;
 }
 
 
@@ -146,7 +157,7 @@ a {
 
 .bg-dark {
   --bg: red;
-  --fg: blue;
+  --fg-primary: blue;
 }
 
 
@@ -156,41 +167,136 @@ body {
   font-weight: var(--fw-400);
   line-height: var(--lh-500);
   background: var(--bg, var(--clr-neutral-100));
-  color: var(--fg, var(--clr-light-500));
+  color: var(--fg-primary, var(--clr-light-400));
 }
 
 //Typography
 
 h1 {
+ font-size: var(--fs-500);
+ color: var(--clr-light-500);
+}
 
+h1,
+.title {
+   color: var(--fg-secondary, var(--clr-light-500));
+   font-weight: var(--fw-700);
 }
 
 h2 {
+font-size: var(--fs-400);
+color: var(--clr-light-400);
+}
 
+.subtitle {
+  font-weight: var(--fw-700);
+}
+
+.card {
+  .title {
+    font-size: var(--fs-600);
+    line-height: var(--lh-100);
+  }
 }
 
 .card-lg {
   .title {
-
+    font-size: var(--fs-700);
   }
   .subtitle {
-
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-weight: var(--fw-400);
   }
+}
+
+
+.trend-up,
+.trend-down {
+  font-size: var(--fs-200);
+}
+
+.trend-up {
+  color: var(--clr-accent-100);
+}
+
+.trend-down {
+  color: var(--clr-accent-200);
+}
+
+header {
+  background: var(--bg, var(--clr-light-100));
+  padding-bottom: 8rem;
+  border-radius: 0 0 var(--br) var(--br);
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 73.5rem;
+  padding: 2rem;
+}
+
+.header__info {
+  padding-bottom: var(--spacer);
+  border-bottom: 1px solid var(--clr-light-500);
+
+  @media (min-width: 40em) {
+    border-bottom: none;
+  }
+}
+
+main {
+  top: -150px;
+  position: relative;
+}
+
+.cards {
+  --min: 15rem;
+  --gap: 2rem;
 }
 
 .card {
+  background: var(--bg-card, var(--clr-light-200));
+  width: 100%;
+  text-align: center;
+  padding: 1.5rem;
 
-  .title {
-
+  &:hover {
+    background: var(--bg-card--hover, var(--clr-light-250));
   }
-
-  .subtitle {
-
-  }
-
 }
 
+.card__header {
+  img, .name{
+    display: inline-block;
+  }
+  img {
+    margin: 0 0.5rem -5px 0;
+  }
+}
+
+.overview {
+  .card__header,
+  .card__body {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: space-between;
+  align-items: end;
+  }
+}
+
+
+
+
 //switch
+
+.switch {
+  gap: 0.25rem;
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: space-between;
+}
+
 input[type=checkbox]{
 	height: 0;
 	width: 0;
@@ -202,7 +308,7 @@ label {
 	text-indent: -9999px;
 	width: 50px;
 	height: 25px;
-	background: grey;
+	background: linear-gradient(45deg, var(--clr-light-blue-100), var(--clr-light-green-100));
 	display: block;
 	border-radius: 25px;
 	position: relative;
@@ -221,7 +327,7 @@ label:after {
 }
 
 input:checked + label {
-	background: #bada55;
+	background: var(--clr-light-300);
 }
 
 input:checked + label:after {
