--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@
 
   //dark theme
   --clr-dark-100: hsl(230, 17%, 14%); //bg
-  --clr-dark-200:  hsl(232, 19%, 15%) //top bg pattern
+  --clr-dark-200:  hsl(230, 20%, 15%);//top bg pattern
   --clr-dark-300: hsl(228, 28%, 20%); //card bg
   --clr-dark-400: hsl(228, 34%, 66%); //text
 
@@ -22,7 +22,15 @@
   --clr-accent-100: hsl(163, 72%, 41%); //trend up
   --clr-accent-200: hsl(356, 69%, 56%); //trend down
 
-  --br: 1rem;
+  //social
+  --clr-fb: hsl(208, 92%, 53%);
+  --clr-tw: hsl(203, 89%, 53%);
+  --clr-in-1:  hsl(37, 97%, 70%);
+  --clr-in-2:  hsl(329, 70%, 58%);
+  --clr-in: linear-gradient(var(--clr-in-1), var(--clr-in-2));
+  --clr-yt: hsl(348, 97%, 39%);
+
+  --br: 0.5rem;
   --spacer: 1rem;
 
   --shadow-100: 0 0.75rem 2.25rem rgba(0, 0, 0, 0.25);
@@ -156,8 +164,27 @@ a {
 }
 
 .bg-dark {
-  --bg: red;
-  --fg-primary: blue;
+  --bg: var(--clr-dark-100);
+  --fg-primary: var(--clr-dark-400);
+  --fg-secondary: var(--clr-neutral-100);
+  --header-bg: var(--clr-dark-200);
+  --bg-card: var(--clr-dark-300);
+}
+
+.fb {
+  --bg-social: var(--clr-fb);
+}
+
+.tw {
+  --bg-social: var(--clr-tw)
+}
+
+.in {
+  --bg-social: var(--clr-in);
+}
+
+.yt {
+  --bg-social: var(--clr-yt);
 }
 
 
@@ -174,7 +201,6 @@ body {
 
 h1 {
  font-size: var(--fs-500);
- color: var(--clr-light-500);
 }
 
 h1,
@@ -185,7 +211,7 @@ h1,
 
 h2 {
 font-size: var(--fs-400);
-color: var(--clr-light-400);
+color: var(--fg-secondary, var(--clr-light-400));
 }
 
 .subtitle {
@@ -210,10 +236,19 @@ color: var(--clr-light-400);
   }
 }
 
+.trend {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+}
+
 
 .trend-up,
 .trend-down {
   font-size: var(--fs-200);
+  font-weight: var(--fw-700);
 }
 
 .trend-up {
@@ -225,7 +260,7 @@ color: var(--clr-light-400);
 }
 
 header {
-  background: var(--bg, var(--clr-light-100));
+  background: var(--header-bg, var(--clr-light-100));
   padding-bottom: 8rem;
   border-radius: 0 0 var(--br) var(--br);
 }
@@ -246,7 +281,7 @@ header {
 }
 
 main {
-  top: -150px;
+  top: -135px;
   position: relative;
 }
 
@@ -260,11 +295,26 @@ main {
   width: 100%;
   text-align: center;
   padding: 1.5rem;
-
+  border-radius: var(--br);
+  position:relative;
+  overflow: hidden;
   &:hover {
     background: var(--bg-card--hover, var(--clr-light-250));
   }
+
+  &:before {
+    content: '';
+    position: absolute;
+    height: 4px;
+    top: 0;
+    right: 0;
+    left: 0;
+    background: var(--bg-social);
+  }
 }
+
+
+
 
 .card__header {
   img, .name{
@@ -285,11 +335,7 @@ main {
   }
 }
 
-
-
-
 //switch
-
 .switch {
   gap: 0.25rem;
   display: grid;
@@ -314,7 +360,7 @@ label {
 	position: relative;
 }
 
-label:after {
+label::after {
 	content: '';
 	position: absolute;
 	top: 1.25px;
@@ -330,11 +376,11 @@ input:checked + label {
 	background: var(--clr-light-300);
 }
 
-input:checked + label:after {
+input:checked + label::after {
 	left: calc(100% - 1.25px);
 	transform: translateX(-100%);
 }
 
-label:active:after {
+label:active::after {
 	width: 32.5px;
 }
