--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
   --clr-dark-100: hsl(230, 17%, 14%); //bg
   --clr-dark-200:  hsl(230, 20%, 15%);//top bg pattern
   --clr-dark-300: hsl(228, 28%, 20%); //card bg
+  --clr-dark-350: hsl(228, 25%, 27%); //card hover
   --clr-dark-400: hsl(228, 34%, 66%); //text
 
 
@@ -169,6 +170,7 @@ a {
   --fg-secondary: var(--clr-neutral-100);
   --header-bg: var(--clr-dark-200);
   --bg-card: var(--clr-dark-300);
+  --bg-card-hover: var(--clr-dark-350);
 }
 
 .fb {
@@ -298,8 +300,9 @@ main {
   border-radius: var(--br);
   position:relative;
   overflow: hidden;
+  transition: background 0.4s ease-in-out;
   &:hover {
-    background: var(--bg-card--hover, var(--clr-light-250));
+    background: var(--bg-card-hover, var(--clr-light-250));
   }
 
   &:before {
@@ -312,9 +315,6 @@ main {
     background: var(--bg-social);
   }
 }
-
-
-
 
 .card__header {
   img, .name{
