--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
   --clr-dark-100: hsl(230, 17%, 14%);
   --clr-dark-200:  hsl(230, 20%, 15%);
   --clr-dark-300: hsl(228, 28%, 20%);
+  --clr-dark-350: hsl(228, 25%, 27%);
   --clr-dark-400: hsl(228, 34%, 66%);
   --clr-accent-100: hsl(163, 72%, 41%);
   --clr-accent-200: hsl(356, 69%, 56%);
@@ -133,7 +134,8 @@ a {
   --fg-primary: var(--clr-dark-400);
   --fg-secondary: var(--clr-neutral-100);
   --header-bg: var(--clr-dark-200);
-  --bg-card: var(--clr-dark-300); }
+  --bg-card: var(--clr-dark-300);
+  --bg-card-hover: var(--clr-dark-350); }
 
 .fb {
   --bg-social: var(--clr-fb); }
@@ -233,9 +235,10 @@ main {
   padding: 1.5rem;
   border-radius: var(--br);
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  transition: background 0.4s ease-in-out; }
   .card:hover {
-    background: var(--bg-card--hover, var(--clr-light-250)); }
+    background: var(--bg-card-hover, var(--clr-light-250)); }
   .card:before {
     content: '';
     position: absolute;
